refactor(api): move `v1/rooms` GET into api crate
See #1240
