# crates/opentalk-controller-core/src/api/v1/rooms/mod.rs
@@ -12,12 +12,10 @@ use actix_web::{
     web::{self, Data, Json, Path, ReqData},
 };
 use opentalk_controller_service_facade::{OpenTalkControllerService, RequestUser, StartRoomError};
-use opentalk_inventory::User;
 use opentalk_types_api_v1::{
     error::{ApiError, ErrorBody},
-    pagination::PagePaginationQuery,
     rooms::{
-        GetRoomsResponseBody, PostRoomsRequestBody, RoomResource,
+        PostRoomsRequestBody, RoomResource,
         by_room_id::{
             DeleteRoomQuery, GetRoomEventResponseBody, PatchRoomsRequestBody,
             PostRoomsStartRequestBody, RoomsStartResponseBody,
@@ -31,65 +29,17 @@ use opentalk_types_common::{
 };
 
 use super::response::NoContent;
-use crate::api::{
-    headers::PageLink,
-    responses::{Forbidden, InternalServerError, Unauthorized},
-    v1::ApiResponse,
-};
+use crate::api::responses::{Forbidden, InternalServerError, Unauthorized};
 
 pub(crate) mod roomserver;
-
-/// Get a list of rooms accessible by the requesting user
-///
-/// All rooms accessible to the requesting user are returned in a list. If no
-/// pagination query is added, the default page size is used.
-#[utoipa::path(
-    params(PagePaginationQuery),
-    responses(
-        (
-            status = StatusCode::OK,
-            description = "List of accessible rooms successfully returned",
-            body = GetRoomsResponseBody,
-            headers(
-                ("link" = PageLink, description = "Links for paging through the results"),
-            ),
-        ),
-        (
-            status = StatusCode::UNAUTHORIZED,
-            response = Unauthorized,
-        ),
-        (
-            status = StatusCode::INTERNAL_SERVER_ERROR,
-            response = InternalServerError,
-        ),
-    ),
-    security(
-        ("BearerAuth" = []),
-    ),
-)]
-#[get("/rooms")]
-pub async fn accessible(
-    service: Data<dyn OpenTalkControllerService>,
-    current_user: ReqData<User>,
-    pagination: web::Query<PagePaginationQuery>,
-) -> Result<ApiResponse<GetRoomsResponseBody>, ApiError> {
-    let current_user = current_user.into_inner();
-    let pagination = pagination.into_inner();
-
-    let (rooms, room_count) = service.get_rooms(current_user.id, &pagination).await?;
-
-    Ok(ApiResponse::new(rooms).with_page_pagination(
-        pagination.per_page,
-        pagination.page,
-        room_count,
-    ))
-}
 
 /// Create a new room
 ///
 /// Creates a new room withh the settings given in the request body.
 #[utoipa::path(
     request_body = PostRoomsRequestBody,
+    tag = "api::v1::rooms",
+    operation_id= "post_rooms",
     responses(
         (
             status = StatusCode::CREATED,
